# Log-structured-filesystem

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
include/: lsfs.h  ondisk.h
scripts/: build.sh  mount.sh  test.sh
src/: checkpoint.c  directory.c  fuse_ops.c  gc.c  imap.c  inode.c  io.c  main.c  segment.c
tests/: CMakeLists.txt
tools/: fsck.lsfs.c  lsfs-debug.c  mkfs.lsfs.c
